# DisroopEmbeddedHipster

./: .clang-format  .clang-tidy  .devcontainer.json  .flake8  .gitignore  404.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.adoc  README.md  _config.yml  about.md  build.py  build.sh  buildDemo.sh  calc_gcov.py  compile_commands.json  config-build.json  contact.md  container-build.py  container-demo-build.py  cppcheck.cfg  debugServer.sh  index.md  news.md  readme.md  run.sh  services.md  sonar-project.properties  tasks.py
.github/: dependabot.yml  renovate.json
.github/workflows/: build--all-conan.yml  build-sonar.yml  build.yml  ci-example.yml  ci.yml
.infrastructure/: Dockerfile  devsetup.sh
.infrastructure/conan_config/: conan.conf  settings.yml
.infrastructure/conan_config/profiles/: clang-linux  gcc-nrf52840  gcc-nrf52840-release
.profiles/: arm-m4  arm-m4-debug  arm-m4-release
.workspace/: layout_disroop_linux  layout_disroop_nrf  ws-blinky-linux.yml
_includes/: footer.html  header.html  tiles.html
_layouts/: allposts.html  home.html  landing.html  page.html  post.html
_posts/: 2020-07-09-VsCode Conan Extension.md
_sass/base/: _typography.scss
_sass/layout/: _header.scss
_sass/libs/: _vars.scss
assets/css/: ie8.scss  ie9.scss
assets/images/: concept.drawio
blinky/: CMakeLists.txt  README.adoc  conanfile.py  sonar-project.properties
blinky/cmake/: FindCodeAnalysis.cmake  FindCoverage.cmake
blinky/source/: CMakeLists.txt  main.c
blinky/source/blinky/: CMakeLists.txt  blinky.c  blinky.h
blinky/source/coordinator/: CMakeLists.txt  coordinator.c  coordinator.h
blinky/source/eiger/: CMakeLists.txt  scheduler.c  scheduler.h  timer.c  timer.h
blinky/source/indication/: CMakeLists.txt  indication.c  indication.h
blinky/source/movement/: CMakeLists.txt  movement.c  movement.h  rotation.c  rotation.h  tracker.c  tracker.h
blinky/source/movement/internal/: rotation.c  rotation.h  tracker.c  tracker.h
blinky/source/platform/: stm32l4xx_it.h
blinky/source/platform-controller/: stm32l4xx_hal_timebase_TIM.c  stm32l4xx_it.c  system_stm32l4xx.c
blinky/source/system/: CMakeLists.txt  SystemClock.c  SystemClock.h
blinky/source/system/platform-controller/: stm32l4xx_it.c
blinky/src/: CMakeLists.txt  LedStrip.cpp  LedStrip.hpp
blinky/test/: CMakeLists.txt  test_rotation.cpp  toggle_test.cpp
blinky/test/blinky/: CMakeLists.txt  blinky_test.cpp
blinky/test/blinky/mocks/: CMakeLists.txt  indication_fake.c  indication_fake.h  mocks_definitions.h  movement_fake.c  movement_fake.h
blinky/test/coordinator/: CMakeLists.txt  coordinator_test.cpp
blinky/test/eiger/: CMakeLists.txt  fake_delay.cpp  fake_delay.hpp  scheduler_test.cpp  timer_test.cpp
blinky/test/indication/: CMakeLists.txt  fake_led.cpp  fake_led.hpp  indication_test.cpp
blinky/test/movement/: CMakeLists.txt  movement_test.cpp
blinky/test/movement/internal/: CMakeLists.txt  fake_gyro.cpp  fake_gyro.hpp  rotation_test.cpp  tracker_test.cpp
blinky/test_package/: Todo
build-wrapper/: build-wrapper-linux-x86-64
demo/: CMakeCache.txt  CMakeLists.txt  conanfile.py  sonar-project.properties
demo/src/: CMakeLists.txt  demo.c  demo.h
demo/test/: CMakeLists.txt  test_demo.cpp
demo/test_package/: conanfile.py  example.c
doc/: all_commands.txt  blinky.adoc  buildenv.drawio  commands.txt  conan.adoc  conan_graph.dot  conan_graph_blinky_debug.dot  doc.adoc  main.adoc  notes.adoc  principles.adoc  project_commands.txt  vscode_commands.txt
hal/: CMakeLists.txt  conanfile.py
hal/include/: Hal.hpp
hal/src/: CMakeLists.txt  Hal.hpp  HalNrf.cpp
hal/src/linux/: CMakeLists.txt  HalLinux.cpp  HalLinux.hpp
hal/src/nrf/: CMakeLists.txt  HalNrf.hpp
nrf52840/: CMakeLists.txt  conanfile.py
nrf52840/cmake/: FindPlatform.cmake
nrf52840/nrf52dk/: CMakeLists.txt
nrf52840/nrf52dk/cmake/: board-settings.cmake
nrf52840/test_package/: conanfile.py  main.c
nrf5sdk/: .gitignore  conanfile.py  local-sources.sh
nrf5sdk/patch/: nrf5.patch
nrf5sdk/test_package/: CMakeLists.txt  conanfile.py
sample-nrf-multi/: .devcontainer.json  .gitignore  build.py
sample-nrf-multi/.env/: dev.env
sample-nrf-multi/.infrastructure/conan_config/: remotes.txt  settings.yml
sample-nrf-multi/.infrastructure/conan_config/profiles/: gcc-nrf52840-debug
sample-nrf-multi/.workspace/: layout_disroop_linux  ws-blinky-linux.yml  ws-blinky-nrf.yml
sample-nrf-multi/blinky/: .gitignore
sample-nrf-multi/blinky/src/: LedStrip.hpp  main_target.cpp
sample-nrf-multi/hal/src/: CMakeLists.txt  HalNrf.hpp
sample-nrf-multi/nrf52840/: CMakeLists.txt  conanfile.py
sample-nrf-multi/nrf52840/cmake/: FindPlatform.cmake
sample-nrf-multi/nrf52840/nrf52dk/config/: app_config.h
sample-nrf-multi/nrf52840/test_package/: CMakeLists.txt
src/blinky/: CMakeLists.txt  conanfile.py
src/blinky/src/: CMakeLists.txt  LedStrip.cpp  LedStrip.hpp  main_target.cpp
src/blinky/test/: CMakeLists.txt
src/hal/: CMakeLists.txt  build.sh  conanfile.py
src/hal/src/: CMakeLists.txt
src/hal/src/nrf/: CMakeLists.txt
src/nrf-sdk/: CMakeLists.txt  build.sh  conanfile.py
src/nrf-sdk/cmake/: FindPlatform.cmake  board-settings.cmake
src/nrf-sdk/config/: app_config.h
src/nrf-sdk/test_package/: conanfile.py
src/nrfx/: .gitignore  CMakeLists.txt  build.sh  conanfile.py
src/sdk-nrfxlib/: build.sh  conanfile.py
tasks/: __init__.py  doc.py  jlink.py  project.py  util.py  vscode.py
tools/: coverage.py
tools/arm-compiler/: build.sh  conanfile.py
tools/base-arm-none-eabi/: conanfile.py
